--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <title>Gradient Background</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body id="gradient">
     <h1>Background Generator</h1>
-    <input type="color" name="color1" value="#00ff00">
-    <input type="color" name="color2" value="#ff0000">
+    <input class="color1" type="color" name="color1" value="#00ff00">
+    <input class="color2"   type="color" name="color2" value="#ff0000">
     <h2>Current CSS Background</h2>
     <h3></h3>
     <script type="text/javascript" src="script.js"></script>
